# fastapi-htmx-todo-list

./: .gitignore  LICENSE  README.md  pyproject.toml  todolist.py
static/: main.css
templates/: completed.html  index.html  todo.html  todos.html
